@@ -1,3 +1,8 @@
+2001-10-10  Alexander V. Lukyanov <lav@yars.free.net>
+
+	* FileSet.cc: (LocalFile) don't set name if already set. This fixes
+	  LocalAccess' ListInfo and mirror.
+
 2001-10-09  Alexander V. Lukyanov <lav@yars.free.net>
 
 	* ftpclass.cc, ftpclass.h, FileAccess.cc: more home_auto fixes;
